<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.NewContactActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/str_new_contact"/>

    <TextView
            android:text="@string/str_choose_category"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvChooseCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spnrCategory"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseCategory"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>


    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="#808080"
            app:layout_constraintTop_toBottomOf="@+id/spnrCategory"
            app:layout_constraintBottom_toTopOf="@+id/etFirstName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/str_first_name"
            android:ems="10"
            android:id="@+id/etFirstName"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/str_first_name"
            android:layout_marginTop="8dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/str_last_name"
            android:ems="10"
            android:id="@+id/etLastName"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/str_last_name"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/str_phone_number"
            android:ems="10"
            android:id="@+id/etPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/etLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/str_phone_number"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/str_email"
            android:ems="10"
            android:id="@+id/etEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/str_email"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/str_fb_link"
            android:ems="10"
            android:id="@+id/etFbLink"
            app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/str_fb_link"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLength="4"
            android:hint="@string/str_birth_year"
            android:ems="10"
            android:id="@+id/etBirthYear"
            app:layout_constraintTop_toBottomOf="@+id/etFbLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/str_birth_year"/>

    <Button
            android:text="@string/str_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSaveChanges"
            app:layout_constraintTop_toBottomOf="@+id/etBirthYear"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>